Qt project for camera control

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ project(gulinux-astronomy-tools)
 cmake_minimum_required(VERSION 2.8)
 add_subdirectory("set-serial-signal")
 add_subdirectory(scripts)
+add_subdirectory(dslr-qt-shooter)
 
 
