--- a/dslr-qt-shooter/imaging/CMakeLists.txt
+++ b/dslr-qt-shooter/imaging/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GPHOTO2 libgphoto2)
 include_directories(${GPHOTO2_INCLUDE_DIRS})
-QT4_WRAP_CPP(dslr-imaging_HEADERS_MOC gphoto.h)
+QT4_WRAP_CPP(dslr-imaging_HEADERS_MOC gphoto.h imager_driver.h)
 
 add_library(dslr-imaging STATIC gphoto.cpp ${dslr-imaging_HEADERS_MOC})
 
