--- a/dslr-qt-shooter/guider/CMakeLists.txt
+++ b/dslr-qt-shooter/guider/CMakeLists.txt
@@ -1,3 +1,3 @@
-QT4_WRAP_CPP(dslr-guider_HEADERS_MOC linguider.h)
-add_library(dslr-guider STATIC linguider.cpp ${dslr-guider_HEADERS_MOC})
-set(dslr-static_LIBS ${dslr-static_LIBS} dslr-guider PARENT_SCOPE)
+QT4_WRAP_CPP(dslr_guider_HEADERS_MOC linguider.h)
+add_library(dslr_guider STATIC linguider.cpp ${dslr_guider_HEADERS_MOC})
+set(dslr_static_LIBS ${dslr_static_LIBS} dslr_guider PARENT_SCOPE)
