--- a/dslr-qt-shooter/CMakeLists.txt
+++ b/dslr-qt-shooter/CMakeLists.txt
@@ -1,12 +1,14 @@
-set(QT_USE_QTNETWORK TRUE)
-FIND_PACKAGE(Qt4 REQUIRED)
-INCLUDE(${QT_USE_FILE})
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+find_package(Qt5Widgets REQUIRED)
+find_package(Qt5Network REQUIRED)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
-ADD_DEFINITIONS(${QT_DEFINITIONS})
-
+include_directories(${Qt5Widgets_INCLUDE_DIRS})
+include_directories(${Qt5Network_INCLUDE_DIRS})
 add_subdirectory(ui)
 add_subdirectory(guider)
 add_subdirectory(imaging)
+qt5_add_resources(dslr_qt_shooter_RESOURCES_RCC resources.qrc )
 
-ADD_EXECUTABLE(dslr-qt4-shooter main.cpp )
-TARGET_LINK_LIBRARIES(dslr-qt4-shooter ${dslr_static_LIBS} ${QT_LIBRARIES} ${dslr_dependencies}  )
+ADD_EXECUTABLE(dslr-qt-shooter main.cpp ${dslr_qt_shooter_RESOURCES_RCC} )
+TARGET_LINK_LIBRARIES(dslr-qt-shooter ${dslr_static_LIBS} Qt5::Widgets Qt5::Network ${dslr_dependencies}  )
