--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(gulinux-astronomy-tools)
-cmake_minimum_required(VERSION 2.8)
-set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)
+cmake_minimum_required(VERSION 2.8.11)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC")
 add_subdirectory("set-serial-signal")
 add_subdirectory(scripts)
 add_subdirectory(dslr-qt-shooter)
