Added serial shooter class

--- a/dslr-qt-shooter/imaging/gphoto/CMakeLists.txt
+++ b/dslr-qt-shooter/imaging/gphoto/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories(${GPHOTO2_INCLUDE_DIRS})
 set(dslr_imaging_SOURCES ${dslr_imaging_SOURCES}
   ${CMAKE_CURRENT_SOURCE_DIR}/gphoto.cpp 
   ${CMAKE_CURRENT_SOURCE_DIR}/gphoto_camera.cpp 
-  
+  ${CMAKE_CURRENT_SOURCE_DIR}/serialshoot.cpp  
   PARENT_SCOPE)
 set(dslr_imaging_HEADERS ${dslr_imaging_HEADERS}
   ${CMAKE_CURRENT_SOURCE_DIR}/gphoto.h
