--- a/dslr-qt-shooter/CMakeLists.txt
+++ b/dslr-qt-shooter/CMakeLists.txt
@@ -3,8 +3,11 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Network REQUIRED)
 find_package(Qt5Concurrent REQUIRED)
+find_package(Qt5Test REQUIRED)
 find_package(ImageMagick REQUIRED)
 find_package(Boost REQUIRED COMPONENTS thread unit_test_framework system filesystem)
+# TODO: check for ufraw-batch app, either in cmake or runtime
+
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${Qt5Widgets_INCLUDE_DIRS})
