--- a/dslr-qt-shooter/ui/CMakeLists.txt
+++ b/dslr-qt-shooter/ui/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(dslr_ui_SOURCES dslr_shooter_window.cpp imagesettingsdialog.cpp zoomableimage.cpp ${CMAKE_SOURCE_DIR}/dslr-qt-shooter/utils/qlambdathread.cpp qzerotextspinbox.cpp)
+set(dslr_ui_SOURCES dslr_shooter_window.cpp imagesettingsdialog.cpp zoomableimage.cpp ${CMAKE_SOURCE_DIR}/dslr-qt-shooter/utils/qlambdathread.cpp )
 set(dslr_ui_HEADERS dslr_shooter_window.h imagesettingsdialog.h ${CMAKE_SOURCE_DIR}/dslr-qt-shooter/utils/qlambdathread.h qzerotextspinbox.h)
 set(dslr_ui_FORMS dslr_shooter_window.ui imagesettingsdialog.ui)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
