refactoring fits image to load in memory images

--- a/dslr-qt-shooter/CMakeLists.txt
+++ b/dslr-qt-shooter/CMakeLists.txt
@@ -22,7 +22,7 @@ add_subdirectory(guider)
 add_subdirectory(imaging)
 qt5_add_resources(dslr_qt_shooter_RESOURCES_RCC resources.qrc )
 
-ADD_EXECUTABLE(dslr-qt-shooter main.cpp utils/fitsimage.cpp utils/fitshistogram.cpp ${dslr_qt_shooter_RESOURCES_RCC} )
+ADD_EXECUTABLE(dslr-qt-shooter main.cpp ${dslr_qt_shooter_RESOURCES_RCC} )
 TARGET_LINK_LIBRARIES(dslr-qt-shooter ${dslr_static_LIBS} Qt5::Widgets Qt5::Network Qt5::Concurrent ${MAGICK_LDFLAGS} 
   ${dslr_dependencies} ${CFITSIO_LDFLAGS} ${Boost_LIBRARIES}  )
 
