added indi dependency and telescope control library

--- a/dslr-qt-shooter/CMakeLists.txt
+++ b/dslr-qt-shooter/CMakeLists.txt
@@ -21,6 +21,7 @@ add_subdirectory(ui)
 add_subdirectory(qwt-src)
 add_subdirectory(guider)
 add_subdirectory(imaging)
+add_subdirectory(telescope)
 qt5_add_resources(dslr_qt_shooter_RESOURCES_RCC resources.qrc )
 
 ADD_EXECUTABLE(dslr-qt-shooter main.cpp ${dslr_qt_shooter_RESOURCES_RCC} )
@@ -28,3 +29,4 @@ TARGET_LINK_LIBRARIES(dslr-qt-shooter ${dslr_static_LIBS} Qt5::Widgets Qt5::Netw
   ${dslr_dependencies} ${CFITSIO_LDFLAGS} ${Boost_LIBRARIES}  )
 
 add_subdirectory(tests)
+
