--- a/dslr-qt-shooter/telescope/CMakeLists.txt
+++ b/dslr-qt-shooter/telescope/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(dslr_telescope STATIC
   devicespanel.cpp
   indiclient.cpp 
   switchvectorproperty.cpp
+  textvectorproperty.cpp
   devicepage.cpp
   ${dslr_telescope_UI}
 )
