numbervectorproperty; make device page scrollable

--- a/dslr-qt-shooter/telescope/CMakeLists.txt
+++ b/dslr-qt-shooter/telescope/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(dslr_telescope STATIC
   indiclient.cpp 
   switchvectorproperty.cpp
   textvectorproperty.cpp
+  numbervectorproperty.cpp
   devicepage.cpp
   ${dslr_telescope_UI}
 )
