light vector property draft

--- a/dslr-qt-shooter/telescope/CMakeLists.txt
+++ b/dslr-qt-shooter/telescope/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library(dslr_telescope STATIC
   switchvectorproperty.cpp
   textvectorproperty.cpp
   numbervectorproperty.cpp
+  lightvectorproperty.cpp
   devicepage.cpp
   ${dslr_telescope_UI}
 )
