use libindi numberFormat function

--- a/dslr-qt-shooter/telescope/CMakeLists.txt
+++ b/dslr-qt-shooter/telescope/CMakeLists.txt
@@ -22,4 +22,4 @@ add_library(dslr_telescope STATIC
 )
 
 set(dslr_static_LIBS ${dslr_static_LIBS} dslr_telescope PARENT_SCOPE)
-set(dslr_dependencies ${dslr_dependencies} ${LIBINDI_LDFLAGS} ${INDI_CLIENT_LIBRARIES} z pthread PARENT_SCOPE)
+set(dslr_dependencies ${dslr_dependencies} ${LIBINDI_LDFLAGS} ${LIBINDI_LIBRARIES} ${INDI_CLIENT_LIBRARIES} z pthread PARENT_SCOPE)
