--- a/dslr-qt-shooter/tests/CMakeLists.txt
+++ b/dslr-qt-shooter/tests/CMakeLists.txt
@@ -6,8 +6,13 @@ add_executable(test_sequence testsequence.cpp)
 target_link_libraries(test_sequence Qt5::Test)
 add_test(NAME sequence COMMAND test_sequence)
 
+
+pkg_check_modules(LIBINDI libindi REQUIRED)
+include_directories(${LIBINDI_INCLUDE_DIRS})
+include_directories(/usr/include/libnova) # TODO: find_package?
+
 add_executable(testindidouble testindidouble.cpp ${CMAKE_SOURCE_DIR}/dslr-qt-shooter/telescope/indidouble.cpp)
-target_link_libraries(testindidouble Qt5::Test)
+target_link_libraries(testindidouble Qt5::Test ${INDI_CLIENT_LIBRARIES} ${LIBINDI_LIBRARIES} z pthread )
 add_test(NAME indidouble COMMAND testindidouble)
 
 add_executable(test_raw_conversion testrawconversion.cpp ${CMAKE_SOURCE_DIR}/dslr-qt-shooter/imaging/file2image.cpp)
