--- a/dslr-qt-shooter/CMakeLists.txt
+++ b/dslr-qt-shooter/CMakeLists.txt
@@ -3,6 +3,7 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Network REQUIRED)
+find_package(Qt5Sql REQUIRED)
 find_package(Qt5Concurrent REQUIRED)
 find_package(Qt5Test REQUIRED)
 find_package(Magick REQUIRED)
@@ -16,6 +17,7 @@ include_directories(${CFITSIO_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${Qt5Widgets_INCLUDE_DIRS})
 include_directories(${Qt5Network_INCLUDE_DIRS})
+include_directories(${Qt5Sql_INCLUDE_DIRS})
 include_directories(${Qt5Concurrent_INCLUDE_DIRS})
 include_directories(${ImageMagick_INCLUDE_DIRS})
 add_subdirectory(ui)
@@ -27,7 +29,7 @@ add_subdirectory(files)
 qt5_add_resources(dslr_qt_shooter_RESOURCES_RCC resources.qrc )
 
 ADD_EXECUTABLE(dslr-qt-shooter main.cpp ${dslr_qt_shooter_RESOURCES_RCC} )
-TARGET_LINK_LIBRARIES(dslr-qt-shooter ${dslr_static_LIBS} Qt5::Widgets Qt5::Network Qt5::Concurrent ${MAGICK_LDFLAGS} 
+TARGET_LINK_LIBRARIES(dslr-qt-shooter ${dslr_static_LIBS} Qt5::Widgets Qt5::Network Qt5::Concurrent Qt5::Sql ${MAGICK_LDFLAGS} 
   ${dslr_dependencies} ${CFITSIO_LDFLAGS} ${Boost_LIBRARIES}  )
 install(TARGETS dslr-qt-shooter RUNTIME DESTINATION bin)
 add_subdirectory(tests)
