new logger window (and methods) (WIP)

--- a/dslr-qt-shooter/ui/CMakeLists.txt
+++ b/dslr-qt-shooter/ui/CMakeLists.txt
@@ -1,6 +1,16 @@
-set(dslr_ui_SOURCES dslr_shooter_window.cpp imagesettingsdialog.cpp zoomableimage.cpp ${CMAKE_SOURCE_DIR}/dslr-qt-shooter/utils/qlambdathread.cpp )
-set(dslr_ui_HEADERS dslr_shooter_window.h imagesettingsdialog.h ${CMAKE_SOURCE_DIR}/dslr-qt-shooter/utils/qlambdathread.h qzerotextspinbox.h)
-set(dslr_ui_FORMS dslr_shooter_window.ui imagesettingsdialog.ui)
+set(dslr_ui_SOURCES
+  dslr_shooter_window.cpp
+  imagesettingsdialog.cpp
+  zoomableimage.cpp
+  messageswindow.cpp
+  ${CMAKE_SOURCE_DIR}/dslr-qt-shooter/utils/qlambdathread.cpp
+)
+
+set(dslr_ui_FORMS
+  dslr_shooter_window.ui
+  imagesettingsdialog.ui
+  messageswindow.ui
+)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
 qt5_wrap_ui(dslr_ui_FORMS_HEADERS ${dslr_ui_FORMS})
