Logging first messages to new window

--- a/dslr-qt-shooter/ui/CMakeLists.txt
+++ b/dslr-qt-shooter/ui/CMakeLists.txt
@@ -3,6 +3,7 @@ set(dslr_ui_SOURCES
   imagesettingsdialog.cpp
   zoomableimage.cpp
   messageswindow.cpp
+  logmessage.cpp
   ${CMAKE_SOURCE_DIR}/dslr-qt-shooter/utils/qlambdathread.cpp
 )
 
