--- a/dslr-qt-shooter/CMakeLists.txt
+++ b/dslr-qt-shooter/CMakeLists.txt
@@ -1,6 +1,7 @@
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTOUIC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Network REQUIRED)
 find_package(Qt5Sql REQUIRED)
@@ -26,9 +27,8 @@ add_subdirectory(guider)
 add_subdirectory(imaging)
 add_subdirectory(telescope)
 add_subdirectory(files)
-qt5_add_resources(dslr_qt_shooter_RESOURCES_RCC resources.qrc )
 
-ADD_EXECUTABLE(dslr-qt-shooter main.cpp ${dslr_qt_shooter_RESOURCES_RCC} )
+ADD_EXECUTABLE(dslr-qt-shooter main.cpp resources.qrc )
 TARGET_LINK_LIBRARIES(dslr-qt-shooter ${dslr_static_LIBS} Qt5::Widgets Qt5::Network Qt5::Concurrent Qt5::Sql ${MAGICK_LDFLAGS} 
   ${dslr_dependencies} ${CFITSIO_LDFLAGS} ${Boost_LIBRARIES}  )
 install(TARGETS dslr-qt-shooter RUNTIME DESTINATION bin)
