commons library; beginning to refactoring main widget extracting away some code

--- a/dslr-qt-shooter/CMakeLists.txt
+++ b/dslr-qt-shooter/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
+set(CMAKE_AUTOUIC ON)
 
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Network REQUIRED)
@@ -21,16 +22,19 @@ include_directories(${Qt5Network_INCLUDE_DIRS})
 include_directories(${Qt5Sql_INCLUDE_DIRS})
 include_directories(${Qt5Concurrent_INCLUDE_DIRS})
 include_directories(${ImageMagick_INCLUDE_DIRS})
+
 add_subdirectory(ui)
 add_subdirectory(qwt-src)
 add_subdirectory(guider)
 add_subdirectory(imaging)
 add_subdirectory(telescope)
 add_subdirectory(files)
+add_subdirectory(commons)
 
 ADD_EXECUTABLE(dslr-qt-shooter main.cpp resources.qrc )
-TARGET_LINK_LIBRARIES(dslr-qt-shooter ${dslr_static_LIBS} Qt5::Widgets Qt5::Network Qt5::Concurrent Qt5::Sql ${MAGICK_LDFLAGS} 
+TARGET_LINK_LIBRARIES(dslr-qt-shooter  ${dslr_static_LIBS} dsl_shooter_commons Qt5::Widgets Qt5::Network Qt5::Concurrent Qt5::Sql ${MAGICK_LDFLAGS} 
   ${dslr_dependencies} ${CFITSIO_LDFLAGS} ${Boost_LIBRARIES}  )
 install(TARGETS dslr-qt-shooter RUNTIME DESTINATION bin)
 add_subdirectory(tests)
+
 
