--- a/dslr-qt-shooter/ui/CMakeLists.txt
+++ b/dslr-qt-shooter/ui/CMakeLists.txt
@@ -3,18 +3,15 @@ set(dslr_ui_SOURCES
   imagesettingsdialog.cpp
   zoomableimage.cpp
   messageswindow.cpp
-  logmessage.cpp
   ${CMAKE_SOURCE_DIR}/dslr-qt-shooter/utils/qlambdathread.cpp
-)
-
-set(dslr_ui_FORMS
   dslr_shooter_window.ui
   imagesettingsdialog.ui
   messageswindow.ui
+  camera_setup.ui
+  camerasetup.cpp
 )
-include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
-qt5_wrap_ui(dslr_ui_FORMS_HEADERS ${dslr_ui_FORMS})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
 add_library(dslr_ui STATIC ${dslr_ui_FORMS_HEADERS} ${dslr_ui_SOURCES})
 set(dslr_static_LIBS ${dslr_static_LIBS} dslr_ui PARENT_SCOPE)
