--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
 project(GalaxyHunter)
+set(PROJECT_NICE_NAME "Galaxy Hunter")
+set(MAJOR_VERSION 0)
+set(MINOR_VERSION 1)
+set(PATCH_VERSION 0)
 
 cmake_minimum_required(VERSION 2.8.11)
 enable_testing()
