--- a/src/files/CMakeLists.txt
+++ b/src/files/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_custom_target(objects_database ALL COMMAND unxz -k -c ${CMAKE_CURRENT_SOURCE_DIR}/objects.db.xz > ${CMAKE_CURRENT_BINARY_DIR}/objects.db SOURCES objects.db.xz)
 configure_file(application.desktop ${PROJECT_NAME}.desktop)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/objects.db DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME})
-install(FILES ${PROJECT_NAME}.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications)
 add_subdirectory(icons)
