--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -8,6 +8,7 @@ set(dslr_ui_SOURCES
   camera_setup.ui
   camerasetup.cpp
   sequenceswidget.cpp
+  addsequenceitem.ui
 )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
