Adding docker build; cleaning up dependencies and fixing some build issues

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,13 +13,14 @@ find_package(Qt5Concurrent REQUIRED)
 find_package(Qt5Test REQUIRED)
 find_package(Qt5PrintSupport REQUIRED)
 find_package(Magick REQUIRED)
-find_package(Boost REQUIRED COMPONENTS thread unit_test_framework system filesystem)
+#find_package(Boost REQUIRED COMPONENTS thread unit_test_framework system filesystem)
 find_package(QCustomPlot REQUIRED)
 # TODO: check for ufraw-batch app, either in cmake or runtime
 
+find_package(OpenCV REQUIRED)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(CFITSIO cfitsio REQUIRED)
-include_directories(${CFITSIO_INCLUDE_DIRS})
+include_directories(${CFITSIO_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${Qt5Widgets_INCLUDE_DIRS})
@@ -40,7 +41,7 @@ add_subdirectory(GuLinux-Commons/Qt)
 
 ADD_EXECUTABLE(${PROJECT_NAME} main.cpp resources.qrc )
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}  ${dslr_static_LIBS} GuLinux_Qt_Commons dsl_shooter_commons Qt5::Widgets Qt5::Network Qt5::Concurrent Qt5::Sql Qt5::PrintSupport ${MAGICK_LDFLAGS} 
-  ${dslr_dependencies} ${CFITSIO_LDFLAGS} ${Boost_LIBRARIES} ${QCustomPlot_LIBRARIES}  )
+  ${dslr_dependencies} ${CFITSIO_LDFLAGS} ${Boost_LIBRARIES} ${QCustomPlot_LIBRARIES} ${OpenCV_LIBRARIES}  )
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
 add_subdirectory(tests)
 
