--- a/src/imaging/testing/CMakeLists.txt
+++ b/src/imaging/testing/CMakeLists.txt
@@ -1,2 +1,2 @@
-set(dslr_imaging_SOURCES ${dslr_imaging_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/testingimager.cpp PARENT_SCOPE)
+set(dslr_imaging_SOURCES ${dslr_imaging_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/testingimager.cpp ${CMAKE_CURRENT_SOURCE_DIR}/resources.qrc PARENT_SCOPE)
 set(dslr_imaging_HEADERS ${dslr_imaging_HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/testingimager.h PARENT_SCOPE)
