Allow to disable INDI client

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,7 +35,11 @@ include_directories(${QCustomPlot_INCLUDE_DIRS})
 add_subdirectory(ui)
 add_subdirectory(guider)
 add_subdirectory(imaging)
-add_subdirectory(telescope)
+option(ENABLE_INDI "Enable INDI client for telescope GOTO (Default: OFF)" Off)
+if(ENABLE_INDI)
+  add_subdirectory(telescope)
+  add_definitions(-DENABLE_INDI)
+endif(ENABLE_INDI)
 add_subdirectory(files)
 add_subdirectory(commons)
 add_subdirectory(GuLinux-Commons/Qt)
