--- a/src/imaging/CMakeLists.txt
+++ b/src/imaging/CMakeLists.txt
@@ -20,10 +20,11 @@ pkg_check_modules(GPHOTO2 libgphoto2)
 if(GPHOTO2_FOUND)
   add_subdirectory(gphoto)
   add_definitions(-DIMAGING_gphoto2)
+  set(gphoto++_library gphoto++)
 endif(GPHOTO2_FOUND)
 
 
 add_library(dslr_imaging STATIC ${dslr_imaging_SOURCES} ${dslr_imaging_HEADERS_MOC})
 
-set(dslr_static_LIBS ${dslr_static_LIBS} dslr_imaging PARENT_SCOPE)
+set(dslr_static_LIBS ${dslr_static_LIBS} dslr_imaging ${gphoto++_library} PARENT_SCOPE)
 set(dslr_dependencies ${dslr_dependencies} ${GPHOTO2_LDFLAGS} PARENT_SCOPE)
