--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ set(PROJECT_NICE_NAME "Galaxy Hunter")
 set(MAJOR_VERSION 0)
 set(MINOR_VERSION 2)
 set(PATCH_VERSION 0)
+add_definitions(-Dcimg_display=0)
 
 cmake_minimum_required(VERSION 2.8.11)
 enable_testing()
