--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,13 +16,13 @@ find_package(Qt5PrintSupport REQUIRED)
 find_package(Magick REQUIRED)
 #find_package(Boost REQUIRED COMPONENTS thread unit_test_framework system filesystem)
 find_package(QCustomPlot REQUIRED)
-
+find_package(CImg REQUIRED)
 # TODO: check for ufraw-batch app, either in cmake or runtime
 
 find_package(OpenCV REQUIRED)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(CFITSIO cfitsio REQUIRED)
-include_directories(${CFITSIO_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
+include_directories(${CFITSIO_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${CImg_INCLUDE_DIRS})
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${Qt5Widgets_INCLUDE_DIRS})
